==> aabzel/trunk/source/mcal/mcal_at32f4/usb/usb_device/Target/usbd_conf.c <==
#include "usb_drv.h"
#include "stm32f4xx.h"
#include "artery_at32f4xx.h"
#include "usbd_def.h"
#include "usbd_core.h"
#include "usb_const.h"
#include "usbd_msc.h"
#include "usbd_hid.h"

void HAL_PCD_MspInit(PCD_HandleTypeDef* pcdHandle){
    GPIO_InitTypeDef GPIO_InitStruct = {0};
    if(USB_OTG_HS==pcdHandle->Instance) {
        __HAL_RCC_GPIOB_CLK_ENABLE();
        /**USB_OTG_HS GPIO Configuration
        PB14     ------> USB_OTG_HS_DM
        PB15     ------> USB_OTG_HS_DP
        */
        GPIO_InitStruct.Pin = GPIO_PIN_14 | GPIO_PIN_15;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF12_OTG_HS_FS;
        HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

        __HAL_RCC_USB_OTG_HS_CLK_ENABLE();

        HAL_NVIC_SetPriority(OTG_HS_EP1_OUT_IRQn, 7, 7);
        HAL_NVIC_EnableIRQ(OTG_HS_EP1_OUT_IRQn);
        HAL_NVIC_SetPriority(OTG_HS_EP1_IN_IRQn, 7, 7);
        HAL_NVIC_EnableIRQ(OTG_HS_EP1_IN_IRQn);
        HAL_NVIC_SetPriority(OTG_HS_IRQn, 7, 7);
        HAL_NVIC_EnableIRQ(OTG_HS_IRQn);
    }
    if(USB_OTG_FS==pcdHandle->Instance) {
        __HAL_RCC_GPIOA_CLK_ENABLE();
        /**USB_OTG_FS GPIO Configuration
        PA9     ------> USB_OTG_FS_VBUS
        PA11     ------> USB_OTG_FS_DM
        PA12     ------> USB_OTG_FS_DP
        */
        GPIO_InitStruct.Pin = GPIO_PIN_9;
        GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

        GPIO_InitStruct.Pin = GPIO_PIN_11|GPIO_PIN_12;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF10_OTG_FS;
        HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

        __HAL_RCC_USB_OTG_FS_CLK_ENABLE();

        HAL_NVIC_SetPriority(OTG_FS_IRQn, 0, 0);
        HAL_NVIC_EnableIRQ(OTG_FS_IRQn);
    }
}

void HAL_PCD_MspDeInit(PCD_HandleTypeDef* pcdHandle) {
  if(USB_OTG_HS==pcdHandle->Instance) {
    __HAL_RCC_USB_OTG_HS_CLK_DISABLE();

    /*USB_OTG_HS GPIO Configuration
    PB14     ------> USB_OTG_HS_DM
    PB15     ------> USB_OTG_HS_DP
    */
    HAL_GPIO_DeInit(GPIOB, GPIO_PIN_14|GPIO_PIN_15);

    HAL_NVIC_DisableIRQ(OTG_HS_EP1_OUT_IRQn);
    HAL_NVIC_DisableIRQ(OTG_HS_EP1_IN_IRQn);
    HAL_NVIC_DisableIRQ(OTG_HS_IRQn);
  }
  if(USB_OTG_FS==pcdHandle->Instance){
    __HAL_RCC_USB_OTG_FS_CLK_DISABLE();
    /**USB_OTG_FS GPIO Configuration
    PA9     ------> USB_OTG_FS_VBUS
    PA11     ------> USB_OTG_FS_DM
    PA12     ------> USB_OTG_FS_DP
    */
    HAL_GPIO_DeInit(GPIOA, GPIO_PIN_9|GPIO_PIN_11|GPIO_PIN_12);
    HAL_NVIC_DisableIRQ(OTG_FS_IRQn);
  }

}

USBD_StatusTypeDef USBD_LL_Init(USBD_HandleTypeDef *pdev){
    /* Init USB Ip. */
    USBD_StatusTypeDef ret_val=USBD_FAIL;
    HAL_StatusTypeDef ret;
    if (USB_SPEED_HS==pdev->id) {
        /* Link the driver to the stack. */
        UsbHandle_t* Node=UsbGetNodeBySpeed(USB_SPEED_HS);
        Node->hpcd_USB_OTG.pData = pdev;
        pdev->pData = &Node->hpcd_USB_OTG;

        Node->hpcd_USB_OTG.Instance = USB_OTG_HS;
        Node->hpcd_USB_OTG.Init.dev_endpoints = 6;
        Node->hpcd_USB_OTG.Init.speed = PCD_SPEED_FULL;
        Node->hpcd_USB_OTG.Init.dma_enable = DISABLE;
        Node->hpcd_USB_OTG.Init.phy_itface = USB_OTG_EMBEDDED_PHY;
        Node->hpcd_USB_OTG.Init.Sof_enable = DISABLE;
        Node->hpcd_USB_OTG.Init.low_power_enable = DISABLE;
        Node->hpcd_USB_OTG.Init.lpm_enable = DISABLE;
        Node->hpcd_USB_OTG.Init.vbus_sensing_enable = DISABLE;
        Node->hpcd_USB_OTG.Init.use_dedicated_ep1 = DISABLE;
        Node->hpcd_USB_OTG.Init.use_external_vbus = DISABLE;

        ret=HAL_PCD_Init(&Node->hpcd_USB_OTG);
        if (HAL_OK==ret){
            ret_val = USBD_OK;

#if (USE_HAL_PCD_REGISTER_CALLBACKS == 1U)
            /* Register USB PCD CallBacks */
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_SOF_CB_ID, PCD_SOFCallback);
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_SETUPSTAGE_CB_ID, PCD_SetupStageCallback);
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_RESET_CB_ID, PCD_ResetCallback);
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_SUSPEND_CB_ID, PCD_SuspendCallback);
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_RESUME_CB_ID, PCD_ResumeCallback);
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_CONNECT_CB_ID, PCD_ConnectCallback);
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_DISCONNECT_CB_ID, PCD_DisconnectCallback);

            HAL_PCD_RegisterDataOutStageCallback(&Node->hpcd_USB_OTG, PCD_DataOutStageCallback);
            HAL_PCD_RegisterDataInStageCallback(&Node->hpcd_USB_OTG, PCD_DataInStageCallback);
            HAL_PCD_RegisterIsoOutIncpltCallback(&Node->hpcd_USB_OTG, PCD_ISOOUTIncompleteCallback);
            HAL_PCD_RegisterIsoInIncpltCallback(&Node->hpcd_USB_OTG, PCD_ISOINIncompleteCallback);
#endif /* USE_HAL_PCD_REGISTER_CALLBACKS */
            HAL_PCDEx_SetRxFiFo(&Node->hpcd_USB_OTG, 0x200);
            HAL_PCDEx_SetTxFiFo(&Node->hpcd_USB_OTG, 0, 0x80);
            HAL_PCDEx_SetTxFiFo(&Node->hpcd_USB_OTG, 1, 0x174);
        }else  {
            ret_val = USBD_FAIL;
        }
    }//if
    if (USB_SPEED_FS==pdev->id ) {
        /* Link the driver to the stack. */
        UsbHandle_t* Node=UsbGetNodeBySpeed(USB_SPEED_FS);
        if(Node) {
            Node->hpcd_USB_OTG.pData = pdev;
            pdev->pData = &Node->hpcd_USB_OTG;

            Node->hpcd_USB_OTG.Instance = USB_OTG_FS;
            Node->hpcd_USB_OTG.Init.dev_endpoints = 4;
            Node->hpcd_USB_OTG.Init.speed = PCD_SPEED_FULL;
            Node->hpcd_USB_OTG.Init.dma_enable = DISABLE;
            Node->hpcd_USB_OTG.Init.phy_itface = PCD_PHY_EMBEDDED;
            Node->hpcd_USB_OTG.Init.Sof_enable = DISABLE;
            Node->hpcd_USB_OTG.Init.low_power_enable = DISABLE;
            Node->hpcd_USB_OTG.Init.lpm_enable = DISABLE;
            Node->hpcd_USB_OTG.Init.vbus_sensing_enable = DISABLE;
            Node->hpcd_USB_OTG.Init.use_dedicated_ep1 = DISABLE;
            ret=HAL_PCD_Init(&Node->hpcd_USB_OTG) ;
            if (HAL_OK !=ret){
                ret_val = USBD_FAIL;
            }else{
            	ret_val = USBD_OK;
            }

#if (USE_HAL_PCD_REGISTER_CALLBACKS == 1U)
            /* Register USB PCD CallBacks */
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_SOF_CB_ID, PCD_SOFCallback);
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_SETUPSTAGE_CB_ID, PCD_SetupStageCallback);
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_RESET_CB_ID, PCD_ResetCallback);
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_SUSPEND_CB_ID, PCD_SuspendCallback);
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_RESUME_CB_ID, PCD_ResumeCallback);
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_CONNECT_CB_ID, PCD_ConnectCallback);
            HAL_PCD_RegisterCallback(&Node->hpcd_USB_OTG, HAL_PCD_DISCONNECT_CB_ID, PCD_DisconnectCallback);

            HAL_PCD_RegisterDataOutStageCallback(&Node->hpcd_USB_OTG, PCD_DataOutStageCallback);
            HAL_PCD_RegisterDataInStageCallback(&Node->hpcd_USB_OTG, PCD_DataInStageCallback);
            HAL_PCD_RegisterIsoOutIncpltCallback(&Node->hpcd_USB_OTG, PCD_ISOOUTIncompleteCallback);
            HAL_PCD_RegisterIsoInIncpltCallback(&Node->hpcd_USB_OTG, PCD_ISOINIncompleteCallback);
#endif /* USE_HAL_PCD_REGISTER_CALLBACKS */
            HAL_PCDEx_SetRxFiFo(&Node->hpcd_USB_OTG, 0x80);
            HAL_PCDEx_SetTxFiFo(&Node->hpcd_USB_OTG, 0, 0x40);
            HAL_PCDEx_SetTxFiFo(&Node->hpcd_USB_OTG, 1, 0x80);
        }
    }

    return ret_val;
}
